package at.spengergasse.ivehif.december_probetest.domain;

public enum AgeRating {
    USK0,
    USK6,
    USK12,
    USK16,
    USK18
}
